FIX: overflow issue

--- a/assets/stylesheets/mobile/chat-index.scss
+++ b/assets/stylesheets/mobile/chat-index.scss
@@ -22,11 +22,11 @@
         border-bottom: 1px solid var(--primary-low);
       }
 
-      &:hover {
-        //technically not even needed cause thee is no hover on mobile, but just in case we reuse in the future for desktop
-        margin: 0 -1.5rem;
-        padding: 0 3rem;
-      }
+      // &:hover {
+      //   //technically not even needed cause thee is no hover on mobile, but just in case we reuse in the future for desktop - later
+      //   margin: 0 -1.5rem;
+      //   padding: 0 3rem;
+      // }
     }
 
     .chat-channel-divider {
